Updated: BookController to use AWS S3 bucket to store book images
